--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,11 @@
     <p>
       Well, hello there!
     </p>
+    <% if defined? user %>
+    <p>
+      You are <b><% user.login %></b>, right? Nice to meet you!
+    </p>
+    <% elsif %>
     <p>
       We're going to now talk to the GitHub API. Ready?
       <a href="https://github.com/login/oauth/authorize?scope=<%= scopes %>&client_id=<%= client_id %>">Click here</a> to begin!</a>
@@ -12,5 +17,6 @@
     <p>
       If that link doesn't work, remember to provide your own <a href="/v3/oauth/#web-application-flow">Client ID</a>!
     </p>
+    <% end %>
   </body>
 </html>
