fix persistent session

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
     </p>
     <% if defined? user %>
     <p>
-      You are <b><% user.login %></b>, right? Nice to meet you!
+      You are <b><%= user.login %></b>, right? Nice to meet you!
     </p>
     <% elsif %>
     <p>
