request with access token to get repositories

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
     <p>
       <ul>
         <% for repo in repositories %>
-          <li><%= repo.name %></li>
+          <li><%= repo['name'] %></li>
         <% end %>
       </ul>
     </p>
